# agent-cli

./: .gitignore  CLAUDE.md  pyproject.toml
adapters/: paper_adapter.py
cli/: config.py  display.py  engine.py  hl_adapter.py  multi_wallet_engine.py  strategy_registry.py  telemetry.py
cli/api/: status_reader.py
cli/commands/: apex.py  run.py
common/: logging_config.py  models.py
configs/: autoresearch_testnet.yaml
configs/autoresearch_2k/: autoresearch_btc.yaml  autoresearch_doge.yaml  autoresearch_eth.yaml  autoresearch_sol.yaml  autoresearch_xrp.yaml
configs/autoresearch_5m/: autoresearch_link.yaml  autoresearch_sol.yaml  autoresearch_sui.yaml
configs/autoresearch_live/: autoresearch_doge.yaml  autoresearch_eth.yaml  autoresearch_sol.yaml  autoresearch_xrp.yaml
configs/autoresearch_testnet/: autoresearch_btc.yaml  autoresearch_doge.yaml  autoresearch_eth.yaml  autoresearch_sol.yaml
execution/: portfolio_risk.py
modules/: apex_config.py  apex_engine.py  market_strategy_map.py  pulse_config.py  radar_config.py  reconciliation.py  strategy_guard.py
parent/: hl_proxy.py
scripts/: analyze_5m.sh  entrypoint.py  run_autoresearch_2k.sh  run_autoresearch_2k_paper.sh  run_autoresearch_5m.sh  run_autoresearch_live.sh  run_autoresearch_paper.sh  run_autoresearch_testnet.sh  transfer_spot_to_perps.sh
skills/apex/scripts/: standalone_runner.py
strategies/: autoresearch.py  autoresearch_5m_live.py  autoresearch_live.py  basis_arb.py  funding_momentum.py  mean_reversion.py  momentum_breakout.py  simplified_ensemble.py  trend_follower.py
tests/: test_engine_strategies.py  test_market_strategy_routing.py  test_paper_adapter.py
